# zero_force_controller

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: cia402.cpp.0816468E642A1B72.idx  cia402.hpp.7F3C86E1903CBE59.idx  clearpath_pdo.cpp.68AAEEC7B7063742.idx  clearpath_pdo.hpp.EEBC37F4BA2C4F53.idx  drive_logic.cpp.F47073287BE475B1.idx  drive_logic.hpp.C361C4701EF0CB56.idx  elm3604_pdo.cpp.B665548A61863C40.idx  elm3604_pdo.hpp.B5061715601E2247.idx  main.cpp.5B4AFB4602E7E2F5.idx
include/: cia402.hpp  clearpath_pdo.hpp  drive_logic.hpp  elm3604_pdo.hpp
src/: cia402.cpp  clearpath_pdo.cpp  drive_logic.cpp  elm3604_pdo.cpp  main.cpp
